--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,4 +2,19 @@ body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   color: blue;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+}
+
+#container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid #ddd;
+  margin: 0 auto;
+}
+
+#container h1 {
+  font-size: 3rem;
 }
