--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  font-family: "Courier New", Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
   color: blue;
   font-size: 1.5rem;
   margin: 0;
