--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  color: blue;
+  color: green;
   font-size: 1.5rem;
   margin: 0;
   padding: 0;
